Added Custom exception handler and changed serviceimpl methods return type to generic